--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 
   <p>Before the script...</p>
 
-  <script>
-    alert( 'Hello, world!' );
-  </script>
-
+  <script src="script.js"></script>
+  
   <p>...After the script.</p>
 
 </body>
